Fixed image alignment
Made the homepage image center align when screen size is smaller

--- a/refined_master.css
+++ b/refined_master.css
@@ -84,7 +84,7 @@ html, body {
 .right-bar {
     top: 7.5vh;
     /* Set this to the height of the top bar */
-    left: calc(100vw - 5vw - 1.5rem);
+    left: calc(100vw - 11vw);
     width: 2.5rem;
     /* Adjust as needed */
     height: 75%;
@@ -97,6 +97,10 @@ html, body {
     background: none;
     z-index: 500;
     border-left: gray solid 0.15rem;
+}
+
+.footer {
+    
 }
 
 .connect-text {
@@ -373,6 +377,25 @@ html, body {
         display: none;
     }
 }
+
+@media (max-width: 800px) {
+    .homepage-body-container {
+        flex-direction: column;
+        align-items: center; /* Center items horizontally */
+        text-align: center; /* Center text */
+    }
+
+    .homepage-image {
+        max-width: 80%;
+        margin: 1vw auto; /* Center the image horizontally */
+    }
+
+    .homepage-paragraph-text {
+        text-align: left;
+        margin: 1vw 0; /* Add margin for spacing */
+    }
+}
+
 
 .overlay {
     opacity: 0;
